# senthos-sui

./: .env.local.example  .env.local.testnet.example  .gitignore  00-onboard.command  01-check-env.command  02-install-toolchain.command  03-build-deploy.command  04-verify-backend.command  05-commit-and-review.command  11-docker-build.command  13-build-both.command  14-deploy-devnet.command  15-fund-wallet.command  19-sync-latest-main.command  20-supabase-setup.command  21-init-onchain-vaults.command  22-railway-env-export.command  23-smoke-test.command  24-verify-build.command  25-commit-phase-a.command  26-fix-diverged.command  27-continue.command  28-commit-and-push.command  29-sync-and-audit.command  30-show-new-commits.command  31-resync-and-update-env.command  32-install-and-smoketest.command  33-commit-and-push-wallet.command  34-push-wiring-branch.command  35-run-everything.command  36-check-tharun.command  38-real-usdc-test.command  40-integrate.command  40b-finish-integration.command  40c-commit-testfix.command  41-merge-main.command  42-push-integration.command  43-push-onboarding.command  44-check-team-updates.command  50-commit-merge-push.command  (+50 more)
app/: layout.tsx  page.tsx
backend/: .env.example  .env.testnet.example  .gitignore  Dockerfile  README.md  SETUP.md  check-adapter.ts  check-fee-ata.ts  check-lk-mint.ts  check-mint.ts  check-old-lk.ts  check-tranche.ts  check-tx.ts  check-vault-onchain.ts  check-vaults.ts  find-wallet.ts  gen-key.js  package-lock.json  package.json  simulate-deposit.ts  sui.env.example  test-onchain.cjs  test-prepare-deposit.ts  test-real-usdc.cjs  tsconfig.dev.json  tsconfig.json
docs/: PPN_DIVEST_WITHDRAW_HANDOFF.md
migrations/: deploy.ts
programs/traxis_lending/: Cargo.toml
programs/traxis_lending/src/: errors.rs  events.rs  lib.rs  state.rs
programs/traxis_lending/src/instructions/: initialize_pool.rs  mod.rs  open_loan.rs  repay_loan.rs  supply.rs  withdraw.rs
programs/traxis_ppn/: Cargo.toml
programs/traxis_ppn/src/: errors.rs  events.rs  lib.rs  state.rs
programs/traxis_ppn/src/instructions/: close_early.rs  divest.rs  harvest_yield.rs  initialize_mock_adapter.rs  initialize_note.rs  mod.rs  redeem_at_maturity.rs
programs/traxis_vault/: Cargo.toml
programs/traxis_vault/src/: errors.rs  events.rs  lib.rs  state.rs
programs/traxis_vault/src/instructions/: admin_withdraw_fees.rs  deposit.rs  exit_active.rs  finalize_vault.rs  initialize_trax_mint.rs  initialize_vault.rs  initialize_vault_tokens.rs  mod.rs  redeem.rs  resolve_leg.rs
scripts/: airdrop-testnet-usdc.ts  create-fee-recipient-ata.ts  demo-full-lifecycle.ts  deploy-devnet.sh  gen_idl.py  (+12 more)
(+134 files in other folders)
