[workspace]
members = [
    "programs/traxis_vault",
    "programs/traxis_ppn",
]
exclude = [
    "programs/traxis_lending",
]
resolver = "2"

[profile.release]
overflow-checks = false
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
