[package]
name = "traxis_lending"
version = "0.1.0"
description = "Traxis lending: single-asset USDC pool, basket/tranche tokens as collateral"
edition = "2021"
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "traxis_lending"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "traxis_vault/idl-build"]

[dependencies]
anchor-lang = { version = "=0.30.1", features = ["init-if-needed"] }
anchor-spl  = { version = "=0.30.1", features = ["token", "associated_token"] }
# We accept traxis_vault TRAX mint tokens as collateral — re-use its PDA types.
traxis_vault = { path = "../traxis_vault", features = ["cpi"] }
