[package]
name = "traxis_ppn"
version = "0.1.0"
description = "Traxis Principal Protected Notes (Meteora-backed)"
edition = "2021"
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "traxis_ppn"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# When `real-meteora` is enabled, the program CPIs into Meteora's program ID.
# When disabled (default), it CPIs into a local MeteoraMockAdapter so the full
# lifecycle can be tested on devnet without Meteora's SDK.
real-meteora = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "traxis_vault/idl-build"]

[dependencies]
anchor-lang = { version = "=0.30.1", features = ["init-if-needed"] }
anchor-spl  = { version = "=0.30.1", features = ["token", "associated_token"] }
traxis_vault = { path = "../traxis_vault", features = ["cpi"] }
